--- a/constrained-transformers/constrained-transformers.cabal
+++ b/constrained-transformers/constrained-transformers.cabal
@@ -37,4 +37,9 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , comonad
+    , free
+    , kan-extensions
+    , mtl
+    , transformers
   default-language: Haskell2010
