--- a/constrained-transformers/constrained-transformers.cabal
+++ b/constrained-transformers/constrained-transformers.cabal
@@ -38,8 +38,12 @@ library
   build-depends:
       base >=4.7 && <5
     , comonad
+    , containers
     , free
     , kan-extensions
+    , mmorph
     , mtl
     , transformers
+    , unordered-containers
+    , vector
   default-language: Haskell2010
