--- a/constrained-transformers/package.yaml
+++ b/constrained-transformers/package.yaml
@@ -17,10 +17,14 @@ description:         Please see the README on GitHub at <https://github.com/morp
 dependencies:
 - base >= 4.7 && < 5
 - comonad
+- containers
 - free
 - kan-extensions
+- mmorph
 - mtl
 - transformers
+- unordered-containers
+- vector
 
 ghc-options:
 - -Wall
